working on company module

--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ TYPEORM_DATABASE = demo
 TYPEORM_PORT = 5432
 TYPEORM_LOGGING = false
 TYPEORM_ENTITIES = dist/**/*.entity{.ts,.js}
-TYPEORM_MIGRATIONS = dist/migrations/*{.ts,.js}
+TYPEORM_MIGRATIONS = dist/migration/*{.ts,.js}
