--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "demo-project",
+   "name": "todo-app",
    "version": "0.0.1",
    "description": "",
    "author": "",
@@ -24,38 +24,28 @@
       "@nestjs/common": "^7.5.1",
       "@nestjs/config": "^0.6.1",
       "@nestjs/core": "^7.5.1",
-      "@nestjs/graphql": "^7.8.2",
       "@nestjs/jwt": "^7.2.0",
       "@nestjs/passport": "^7.1.5",
       "@nestjs/platform-express": "^7.5.1",
       "@nestjs/typeorm": "^7.1.5",
-      "apollo-server-express": "^2.19.0",
       "bcrypt": "^5.0.0",
       "class-transformer": "^0.3.1",
       "class-validator": "^0.12.2",
-      "g": "^2.0.1",
-      "graphql": "^15.4.0",
-      "graphql-tools": "^7.0.1",
+      "jsonwebtoken": "^8.5.1",
       "passport": "^0.4.1",
-      "passport-jwt": "^4.0.0",
-      "passport-local": "^1.0.0",
       "pg": "^8.5.1",
-      "reflect-metadata": "^0.1.10",
+      "reflect-metadata": "^0.1.13",
       "rimraf": "^3.0.2",
       "rxjs": "^6.6.3",
-      "typeorm": "0.2.29",
-      "mysql": "^2.14.1"
+      "typeorm": "^0.2.29"
    },
    "devDependencies": {
-      "@nestjs/cli": "^7.5.3",
+      "@nestjs/cli": "^7.5.1",
       "@nestjs/schematics": "^7.1.3",
       "@nestjs/testing": "^7.5.1",
-      "@types/bcrypt": "^3.0.0",
       "@types/express": "^4.17.8",
       "@types/jest": "^26.0.15",
-      "@types/node": "^8.0.29",
-      "@types/passport-jwt": "^3.0.3",
-      "@types/passport-local": "^1.0.33",
+      "@types/node": "^14.14.6",
       "@types/supertest": "^2.0.10",
       "@typescript-eslint/eslint-plugin": "^4.6.1",
       "@typescript-eslint/parser": "^4.6.1",
@@ -67,9 +57,9 @@
       "supertest": "^6.0.0",
       "ts-jest": "^26.4.3",
       "ts-loader": "^8.0.8",
-      "ts-node": "3.3.0",
+      "ts-node": "^9.0.0",
       "tsconfig-paths": "^3.9.0",
-      "typescript": "3.3.3333"
+      "typescript": "^4.0.5"
    },
    "jest": {
       "moduleFileExtensions": [
