--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
       "test:e2e": "jest --config ./test/jest-e2e.json"
    },
    "dependencies": {
+      "@nestjs-query/query-graphql": "^0.21.2",
+      "@nestjs-query/query-typeorm": "^0.21.2",
       "@nestjs/common": "^7.5.1",
       "@nestjs/config": "^0.6.1",
       "@nestjs/core": "^7.5.1",
-      "@nestjs/graphql": "^7.8.2",
+      "@nestjs/graphql": "^7.9.1",
       "@nestjs/jwt": "^7.2.0",
       "@nestjs/passport": "^7.1.5",
       "@nestjs/platform-express": "^7.5.1",
@@ -35,7 +37,8 @@
       "class-validator": "^0.12.2",
       "g": "^2.0.1",
       "graphql": "^15.4.0",
-      "graphql-tools": "^7.0.1",
+      "graphql-relay": "^0.6.0",
+      "graphql-tools": "^7.0.2",
       "passport": "^0.4.1",
       "passport-jwt": "^4.0.0",
       "passport-local": "^1.0.0",
@@ -43,17 +46,17 @@
       "reflect-metadata": "^0.1.10",
       "rimraf": "^3.0.2",
       "rxjs": "^6.6.3",
-      "typeorm": "0.2.29",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.29"
    },
    "devDependencies": {
       "@nestjs/cli": "^7.5.3",
       "@nestjs/schematics": "^7.1.3",
       "@nestjs/testing": "^7.5.1",
+      "@types/async": "^2.0.31",
       "@types/bcrypt": "^3.0.0",
       "@types/express": "^4.17.8",
       "@types/jest": "^26.0.15",
-      "@types/node": "^8.0.29",
+      "@types/node": "^14.14.10",
       "@types/passport-jwt": "^3.0.3",
       "@types/passport-local": "^1.0.33",
       "@types/supertest": "^2.0.10",
@@ -69,7 +72,7 @@
       "ts-loader": "^8.0.8",
       "ts-node": "3.3.0",
       "tsconfig-paths": "^3.9.0",
-      "typescript": "3.3.3333"
+      "typescript": "^4.0.5"
    },
    "jest": {
       "moduleFileExtensions": [
